--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2956,4 +2956,287 @@ h1, h2, h3, h4, h5, h6 {
       margin: 12px; }
   
   /*----------------------------------------*/
-    
+    /*  03. globel
+/*----------------------------------------*/
+@media (min-width: 1024px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+      max-width: 1312px; } }
+  .container.mxw_1640 {
+    max-width: 1640px; }
+  
+  .home-blockchain {
+    background-color: #03050E; }
+    .home-blockchain h1, .home-blockchain h2, .home-blockchain h3, .home-blockchain h4, .home-blockchain h5, .home-blockchain h6 {
+      font-family: 'Titillium Web', sans-serif;
+      line-height: 1.1;
+      font-weight: 400; }
+  
+  .home-bitcoin {
+    background-color: #0B1121; }
+    .home-bitcoin h1, .home-bitcoin h2, .home-bitcoin h3, .home-bitcoin h4, .home-bitcoin h5, .home-bitcoin h6 {
+      line-height: 1.1;
+      color: #DAEDF8; }
+    .home-bitcoin p {
+      color: #A4BDCC; }
+  
+  .sec-title__subtitle,
+  .token__tab .nav-item .nav-link::before,
+  .footer__copyright,
+  blockquote .icon {
+    background: linear-gradient(270deg, #5E2FF4 0%, #8CA7FF 17.47%, #E4DAFF 39.54%, #C570FB 60.49%, #C3B1FE 84.44%, #5E2FF4 100%); }
+  
+  .blockchain-header__account i,
+  .blockchain-header__language .dropdown-menu .dropdown-item::before,
+  .team__social.style2 .h-icon::after,
+  .team__single::after,
+  .roadmap__list-inner::after,
+  .footer__widget-community,
+  .token-chat__animation {
+    background: linear-gradient(98deg, #2167e8 0%, hwb(161 7% 28%) 100%); }
+  
+  .gradient-bg-2,
+  .btc-btn--gradient,
+  .pricing__single.active,
+  .service__single::before,
+  .footer__btc-links li a::before,
+  .faq__btc .accordion_box .block .arrow::before,
+  .faq__nav li .nav-link.active {
+    background: linear-gradient(90deg, #45ACAB 0%, #4788AC 100%); }
+  
+  .sec-title__subtitle,
+  .blockchain-header__account i,
+  .faq__nav li .nav-link.active {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; }
+  
+  .-tracking-2\/4 {
+    letter-spacing: -2.4px; }
+  
+  .text-80 {
+    font-size: 80px; }
+  
+  .absolute {
+    position: absolute; }
+  
+  .tagcloud {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: -10px; }
+    .tagcloud a {
+      display: block;
+      color: #92939E;
+      min-height: 32px;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+      text-transform: capitalize;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 0px 17px;
+      margin: 7px;
+      position: relative;
+      background-color: #0B0B29;
+      border-radius: 3px;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px; }
+      .tagcloud a:hover {
+        color: var(--color-white);
+        background-color: var(--color-primary); }
+  
+  .post-tags li {
+    font-size: 15px;
+    text-transform: capitalize;
+    position: relative; }
+    .post-tags li:not(:first-child, :last-child) {
+      margin-right: 11px;
+      padding-right: 15px; }
+      .post-tags li:not(:first-child, :last-child)::before {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        width: 5px;
+        height: 5px;
+        background-color: var(--color-primary);
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        content: ""; }
+    .post-tags li span {
+      display: inline-block;
+      background-color: var(--color-primary);
+      padding: 0px 10px;
+      line-height: 25px;
+      color: var(--color-white);
+      border-radius: 3px;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px;
+      margin-right: 12px; }
+    .post-tags li a {
+      color: var(--color-black); }
+      .post-tags li a:hover {
+        color: var(--color-black); }
+  
+  .mfp-zoom-in .mfp-content {
+    opacity: 0;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9); }
+  
+  .mfp-zoom-in.mfp-ready .mfp-content {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-close {
+    padding: 0;
+    right: 0;
+    text-align: center;
+    top: -36px;
+    width: 36px;
+    height: 36px;
+    -webkit-border-radius: 0;
+    -khtml-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    border-radius: 0;
+    background: var(--color-white);
+    cursor: pointer;
+    opacity: 1;
+    font-size: 0;
+    border: 9px solid transparent;
+    position: absolute; }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-figure .mfp-close {
+    top: 4px; }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-close::before, body .mfp-wrap .mfp-container .mfp-content .mfp-close::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    margin-top: -1px;
+    transform-origin: 50% 50%;
+    -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -khtml-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -moz-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -ms-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background-color: #222; }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-close::before {
+    -webkit-transform: rotate(45deg);
+    -khtml-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg); }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-close::after {
+    -webkit-transform: rotate(-45deg);
+    -khtml-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-close:hover::before, body .mfp-wrap .mfp-container .mfp-content .mfp-close:hover::after {
+    -webkit-transform: rotate(0);
+    -khtml-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+    transform: rotate(0); }
+  
+  body .mfp-wrap .mfp-container .mfp-content .mfp-close:hover::before, body .mfp-wrap .mfp-container .mfp-content .mfp-close:hover::after {
+    -webkit-transform: rotate(0);
+    -khtml-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+    transform: rotate(0); }
+  
+  .mfp-iframe-holder .mfp-content {
+    max-width: 1170px; }
+  
+  .border-left {
+    padding-left: 40px;
+    position: relative; }
+    @media (max-width: 767px) {
+      .border-left {
+        padding-left: 20px; } }
+    .border-left::before {
+      position: absolute;
+      width: 3px;
+      height: 40px;
+      content: "";
+      background-color: #45ACAB;
+      left: 0;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
+  
+  @-webkit-keyframes fadeInUp-2 {
+    0% {
+      opacity: 0;
+      transform: translate3d(0, 30px, 0) rotateY(15deg); }
+    100% {
+      opacity: 1;
+      transform: translate3d(0, 0px, 0) rotateY(0deg); } }
+  @keyframes fadeInUp-2 {
+    0% {
+      opacity: 0;
+      transform: translate3d(0, 30px, 0) rotateY(15deg); }
+    100% {
+      opacity: 1;
+      transform: translate3d(0, 0px, 0) rotateY(0deg); } }
+  .fadeInUp-2 {
+    -webkit-animation-name: fadeInUp-2;
+    animation-name: fadeInUp-2;
+    transition: 10s !important; }
+  
+  .z-1 {
+    z-index: 1; }
+  
+  @media (max-width: 767px) {
+    .pb-xs-80 {
+      padding-bottom: 80px; } }
+  
+  @media (max-width: 991px) {
+    .mb-0-pb {
+      padding-bottom: 0; } }
+  
+  @media (max-width: 1199px) {
+    .pt-lg-80 {
+      padding-top: 80px; } }
+  
+  @media (max-width: 991px) {
+    .pb-md-100 {
+      padding-bottom: 100px; } }
+  
+  /*----------------------------------------*/
+  
