--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2683,4 +2683,277 @@ h1, h2, h3, h4, h5, h6 {
   .header-mobile-search input {
     border: 2px solid rgba(150, 144, 162, 0.09);
     padding: 15px; }
+/* Navigation css */
+.main-menu {
+    display: flex;
+    align-items: center;
+    flex-grow: 1; }
+    .main-menu__wrap {
+      position: static; }
+    .main-menu ul {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      list-style: none;
+      padding: 0;
+      margin: 0; }
+      .main-menu ul li {
+        position: relative; }
+        .main-menu ul li:not(:last-child) {
+          margin-right: 7px; }
+        .main-menu ul li .submenu li {
+          margin-right: 0; }
+        .main-menu ul li a {
+          display: inline-block;
+          text-decoration: none;
+          font-size: 18px;
+          font-weight: 400;
+          color: var(--color-white);
+          padding: 40px 18px;
+          position: relative;
+          line-height: 22px;
+          text-transform: capitalize;
+          position: relative; }
+          .main-menu ul li a::before {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            height: calc(100% + 42px);
+            height: -webkit-calc(100% + 42px);
+            width: 100%;
+            left: 0;
+            z-index: -1;
+            -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -khtml-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -moz-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -ms-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+            -o-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+            transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+            transform: scaleY(0);
+            transform-origin: bottom center;
+            background: rgba(255, 255, 255, 0.03); }
+        .main-menu ul li:hover > a:before, .main-menu ul li.active > a::before {
+          transform: scaleY(1);
+          opacity: 1; }
+        .main-menu ul li.menu-item-has-children > a::after {
+          content: "\f078";
+          transform: translateY(-1px);
+          display: inline-block;
+          padding-left: 4px;
+          font-family: "Font Awesome 5 Pro";
+          font-weight: 900;
+          font-size: 12px; }
+        .main-menu ul li.menu-item-has-children:hover > .submenu {
+          opacity: 1;
+          visibility: visible;
+          top: 100%;
+          pointer-events: all; }
+        .main-menu ul li .submenu {
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+          flex-direction: column;
+          position: absolute;
+          min-width: 240px;
+          top: calc(100% + 10px);
+          opacity: 0;
+          visibility: hidden;
+          background: #151534;
+          left: 0;
+          padding: 20px 0;
+          -webkit-transition: 0.3s ease-out;
+          -o-transition: 0.3s ease-out;
+          transition: 0.3s ease-out;
+          z-index: 3;
+          text-align: left;
+          pointer-events: none;
+          box-shadow: 0 0.5rem 1.875rem rgba(0, 0, 0, 0.1); }
+          .main-menu ul li .submenu li a {
+            color: var(--color-white);
+            padding: 8px 30px;
+            display: block;
+            margin: 0; }
+            .main-menu ul li .submenu li a::before {
+              display: none; }
+          .main-menu ul li .submenu li:hover > a {
+            letter-spacing: 1px; }
+          .main-menu ul li .submenu ul {
+            left: 100%;
+            top: 0px; }
+          .main-menu ul li .submenu .active > a {
+            letter-spacing: 1px; }
+        .main-menu ul li.has-mega-menu {
+          position: static; }
+          .main-menu ul li.has-mega-menu li {
+            width: 100%; }
+        .main-menu ul li .mega-menu {
+          width: 100%;
+          left: 0;
+          right: 0;
+          position: absolute;
+          box-shadow: none;
+          background-color: transparent;
+          padding: 0;
+          max-width: 1287px;
+          margin: 0 auto;
+          padding: 40px 35px;
+          padding-bottom: 0;
+          background-color: #151534; }
+          .main-menu ul li .mega-menu .mega-menu-content a {
+            padding: 0; }
+          .main-menu ul li .mega-menu .mega-menu-content .col {
+            margin-bottom: 30px; }
+          .main-menu ul li .mega-menu .mega-menu-content .demo-pic {
+            margin-bottom: 10px;
+            position: relative;
+            height: 350px;
+            overflow: hidden;
+            -webkit-transition: 0.3s;
+            -o-transition: 0.3s;
+            transition: 0.3s; }
+            .main-menu ul li .mega-menu .mega-menu-content .demo-pic:hover {
+              -webkit-transform: translateY(-10px);
+              -ms-transform: translateY(-10px);
+              transform: translateY(-10px); }
+            @media (max-width: 1199px) {
+              .main-menu ul li .mega-menu .mega-menu-content .demo-pic {
+                height: 230px; } }
+            .main-menu ul li .mega-menu .mega-menu-content .demo-pic.coming-soon:hover {
+              -webkit-transform: translateY(0px);
+              -ms-transform: translateY(0px);
+              transform: translateY(0px); }
+          .main-menu ul li .mega-menu h3 {
+            font-size: 15px;
+            text-align: center;
+            font-family: var(--font-body);
+            font-weight: 500; }
   
+  .main-menu ul li.menu-last ul.submenu {
+    right: 0;
+    left: auto; }
+  
+  .main-menu ul li.menu-last ul.submenu ul {
+    right: auto;
+    left: -100%; }
+  
+  .main-menu ul li ul.submenu .menu-item-has-children > a::after {
+    position: absolute;
+    top: 9px;
+    right: 15px;
+    content: "\f105";
+    font-size: 13px; }
+  
+  .thm-btn {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: None;
+    color: var(--color-white);
+    border-style: none;
+    padding: 18px 38px;
+    align-self: center;
+    position: relative;
+    display: inline-block;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    text-transform: uppercase;
+    line-height: 1.1;
+    -webkit-transition: all 300ms linear 0ms;
+    -o-transition: all 300ms linear 0ms;
+    transition: all 300ms linear 0ms;
+    background-color: var(--color-primary); }
+    .thm-btn:hover {
+      color: var(--color-white); }
+    .thm-btn--dark {
+      background-color: var(--color-dark); }
+      .thm-btn--dark:hover {
+        background-color: var(--color-primary);
+        color: var(--color-white); }
+  
+  .blc-btn {
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--color-white);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 15px 60px;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    display: inline-block;
+    position: relative;
+    z-index: 1; }
+    .blc-btn::before, .blc-btn::after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      content: "";
+      background-image: url(../img/icon/btn-border.svg);
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      z-index: -1;
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s; }
+    .blc-btn::after {
+      background-image: url(../img/icon/btn-border-hover.svg);
+      opacity: 0; }
+    .blc-btn:hover {
+      transform: translateY(-2px);
+      color: var(--color-white); }
+      .blc-btn:hover::after {
+        opacity: 1; }
+    .blc-btn--white::before {
+      background-image: url(../img/icon/btn-border-white.svg); }
+    .blc-btn--white::after {
+      background-image: url(../img/icon/btn-border.svg); }
+  
+  .btc-btn {
+    background-color: #DAEDF8;
+    display: inline-block;
+    padding: 12px 35px;
+    padding-right: 100px;
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #0B1121;
+    letter-spacing: 1.5px;
+    position: relative; }
+    @media (max-width: 1199px) {
+      .btc-btn {
+        padding-right: 80px; } }
+    .btc-btn:hover {
+      color: #0B1121; }
+      .btc-btn:hover i {
+        right: 30px; }
+    .btc-btn i {
+      position: absolute;
+      top: 50%;
+      right: 35px;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s; }
+    .btc-btn--gradient {
+      color: var(--color-white); }
+      .btc-btn--gradient:hover {
+        color: var(--color-white); }
+  
+  .btns {
+    margin: -12px; }
+    .btns a {
+      margin: 12px; }
+  
+  /*----------------------------------------*/
+    
