--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3799,4 +3799,126 @@ h1, h2, h3, h4, h5, h6 {
       right: 0; }
   
   /*----------------------------------------*/
-   
+   /*  06. feature
+/*----------------------------------------*/
+.feature__wrap {
+    padding: 0 121px; }
+    @media (max-width: 1200px) {
+      .feature__wrap {
+        padding: 0 101px; } }
+    @media (max-width: 1199px) {
+      .feature__wrap {
+        padding: 0 73px; } }
+    @media (max-width: 991px) {
+      .feature__wrap {
+        padding: 0;
+        margin-bottom: -30px;
+        justify-content: center; } }
+  @media (max-width: 991px) {
+    .feature__item {
+      width: 50%;
+      margin-bottom: 30px; } }
+  .feature__item:nth-child(odd) h4 {
+    margin-top: 20px; }
+  .feature__item:nth-child(even) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+    -webkit-transform: translateY(100px);
+    -ms-transform: translateY(100px);
+    transform: translateY(100px); }
+    @media (max-width: 1199px) {
+      .feature__item:nth-child(even) {
+        -webkit-transform: translateY(80px);
+        -ms-transform: translateY(80px);
+        transform: translateY(80px); } }
+    @media (max-width: 991px) {
+      .feature__item:nth-child(even) {
+        -webkit-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        transform: translateY(0px);
+        flex-direction: column; } }
+    .feature__item:nth-child(even) h4 {
+      margin-bottom: 20px; }
+  .feature__item:nth-child(2) .icon {
+    background-color: #FF9B5C; }
+  .feature__item:nth-child(3) .icon {
+    background-color: #5637C8; }
+  .feature__item:nth-child(4) .icon {
+    background-color: #FC3352; }
+  .feature__item:nth-child(5) .icon {
+    background-color: #3D88FB; }
+  .feature__item .icon {
+    width: 154px;
+    height: 154px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background-color: #00D89E;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 3px 3px 20px 0px #1A1A30 inset;
+    margin: 0 auto; }
+    @media (max-width: 1199px) {
+      .feature__item .icon {
+        width: 120px;
+        height: 120px; } }
+  .feature__item h4 {
+    font-size: 22px;
+    line-height: 31px;
+    font-weight: 600; }
+    @media (max-width: 1199px) {
+      .feature__item h4 {
+        font-size: 20px; } }
+  .feature__line-shape {
+    position: absolute;
+    top: 77%;
+    left: 0;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-left: -30px;
+    margin-right: -30px;
+    z-index: -1; }
+    @media (max-width: 991px) {
+      .feature__line-shape {
+        display: none; } }
+  .feature__sec-shape {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0; }
+  .feature__single {
+    padding: 0 50px; }
+    @media (max-width: 767px) {
+      .feature__single {
+        padding: 0 20px; } }
+    .feature__single h3 {
+      font-size: 36px;
+      margin-bottom: 48px;
+      line-height: 1.3;
+      letter-spacing: -1.08px;
+      margin-left: -40px; }
+      @media (max-width: 1199px) {
+        .feature__single h3 {
+          font-size: 26px; } }
+      @media (max-width: 767px) {
+        .feature__single h3 {
+          margin-left: -10px; } }
+      .feature__single h3::before {
+        top: 26px;
+        left: -10px; }
+      .feature__single h3 span {
+        font-weight: 300; }
+    .feature__single p {
+      font-size: 18px;
+      line-height: 25px; }
+      .feature__single p:not(:last-child) {
+        margin-bottom: 42px; }
+  
+  /*----------------------------------------*/
+  
